trying to fix spacing

--- a/docs/_sass/_base.scss
+++ b/docs/_sass/_base.scss
@@ -1,11 +1,10 @@
 * {
-    font-family: 'Helvetica', 'Arial', sans-serif;
+    font-family: 'Times New Roman', serif;
     line-height: 1.5;
 }
 
 body {
     background-color: var(--bg-color);
-    text-align: justify;
 }
 
 .container {
